--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "hello-ng",
+  "name": "admin-starter-with-ng",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
+  },
+  "author": {
+    "email": "double_cl@163.com",
+    "name": "chenc"
   },
   "private": true,
   "dependencies": {
@@ -29,14 +34,19 @@
     "@angular-devkit/build-angular": "^18.0.2",
     "@angular/cli": "^18.0.2",
     "@angular/compiler-cli": "^18.0.0",
+    "@eslint/js": "^9.4.0",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "18.0.1",
+    "eslint": "^9.3.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.3.0",
     "tailwindcss": "^3.4.3",
-    "typescript": "~5.4.5"
+    "typescript": "~5.4.5",
+    "typescript-eslint": "8.0.0-alpha.20"
   }
 }
